AI edit: 1.0.5
